Profile design card layout bugfix.

--- a/app/assets/stylesheets/components/_new-comment-form.scss
+++ b/app/assets/stylesheets/components/_new-comment-form.scss
@@ -17,7 +17,7 @@
 .new-comment-form-input textarea {
   width: 100%;
   border-radius: 10px;
-  padding: 15px;
+  padding: 15px 64px 15px 15px;
   height: 65px;
 }
 
